--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.0",
     "react-yandex-maps": "^4.6.0",
     "redux": "^4.2.0",
+    "tabler-icons-react": "^1.48.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
