--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-yandex-maps": "^4.6.0",
     "redux": "^4.2.0",
     "typescript": "^4.6.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
