--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/ramda": "^0.28.12"
+    "@types/ramda": "^0.28.12",
+    "@types/uuid": "^8.3.4"
   }
 }
