--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-yandex-maps": "^4.6.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "swiper": "^8.1.5",
     "tabler-icons-react": "^1.48.0",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2",
