--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@visx/curve": "^2.1.0",
+    "@visx/xychart": "^2.10.0",
     "axios": "^0.27.2",
     "firebase": "^9.6.8",
     "html5-qrcode": "^2.2.1",
